Added dependency for jakarta for java 11 compatibility. Removed reliance on com.sun.xml.internal.